# ReZygisk

./: .gitignore  README.md  TRANSLATOR.md  build.gradle.kts  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  issue_template.yml  pull_request.yml
.github/workflows/: ci.yml
loader/: build.gradle.kts
module/: build.gradle.kts
module/src/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  uninstall.sh
webroot/: LICENSE  index.html
webroot/css/: error.css  fonts.css  icons.css  index.css
webroot/fonts/: outfit.css
webroot/js/: browserRedirect.js  daemonActions.js  errorCatcher.js  errorScreen.js  init_theme.js  kernelsu.js  language.js  light.icon.js  list.js  main.js  navbar.js  restoreError.js  smallPageDesabler.js  theme.js  webuiError.js
webroot/lang/: en_US.json  ja_JP.json  pt_BR.json  ro_RO.json  ru_RU.json  vi_VN.json  zh_CN.json  zh_TW.json
webui/: index.html
webui/css/: base.css  main.css  terminal.css
webui/js/: main.js  (+1 more)
zygiskd/: Makefile  build.gradle.kts  build.gradlew.kts  companion.c  constants.h  dl.c  dl.h  main.c  utils.c  utils.h  zygiskd  zygiskd.c
zygiskd-new/: companion.c  constants.h  dl.h  main.c  utils.c  utils.h  zygiskd.c
zygiskd/src/: .gitignore  CMakeLists.txt  Makefile  companion.c  companion.h  companion.rs  constants.h  constants.rs  dl.c  dl.rs  main.c  main.rs  utils.c  utils.h  utils.rs  zygiskd.c  zygiskd.h  zygiskd.rs
zygiskd/src/root_impl/: apatch.c  apatch.h  apatch.rs  common.c  common.h  kernelsu.c  kernelsu.h  kernelsu.rs  magisk.rs  mod.rs
(+63 files in other folders)
